--- a/style.css
+++ b/style.css
@@ -27,43 +27,45 @@
 
   .headline__eyebrow, .headline__subhead {
     width: 85%;
-    margin: 0 auto;
+    margin: 1rem;
     color: white;
     font-family: 'Open Sans', sans-serif;
-    font-size: 1.5rem;
+    font-size: 3rem;
     font-weight: bold;
+    text-align: center; 
 }
-h1 {
+/* h1 {
     display: block; 
     margin-block-start: 0.67em;
     margin-block-end: 0.67em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-}
+} */
 
 .headline__title {
     font-family: 'Open Sans', sans-serif;
-    font-size: 5rem;
+    font-size: 6rem;
     font-weight: bold;
     margin: 0 auto;
     line-height: 1;
     color: #ff2247;
     text-align: center;
     background: linear-gradient(to right, rgba(255,255,255,0), white 20%, white 80%, white 20%, rgba(255,255,255,0) 100%);
-    margin: 1rem 0;
+    ;
 }
 .container-fluid {
     background: linear-gradient( #c39b7c, transparent, #c49a6c); 
     margin: 1rem 0; 
 }
+
 p {
-    font-size: 1rem;
+    font-size: 2rem; 
     line-height: 1.35em;
-    margin: .9375em 1.25em;
-    display: block;
-    margin-block-start: 1em;
+    margin: 10em; 
+    display: block; 
+    margin-block-start: 10em;
     margin-block-end: 1em;
-    margin-inline-start: 0px;
+    margin-inline-start: 20px;
     margin-inline-end: 0px;
 }
 
@@ -73,14 +75,27 @@ p {
     color: #3d1c0f;
 }
 
-
 ul.checkmark, ul.ulcheckmark {
     list-style-image: url(https://d13p2xj50zkyqm.cloudfront.net/scripts/assets/checkmark.png);
 }
 
+ul{
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+
 li {
+    display: list-item; 
     line-height: 1.35em;
     margin-top: 1.25em;
+    margin-left: 5em; 
+    font-size: 2em; 
+    
 }
 .s2 {
     padding-top: 8rem;
@@ -93,7 +108,7 @@ li {
     background-position: calc(60% - 100px);
 }
 .parallax {
-    background-image: url(https://d13p2xj50zkyqm.cloudfront.net/promos_3/health/GLN/masterswitch_chocolateRL_ihtml_0317/ParallaxOne_5.jpg);
+    background-image: url(https://d13p2xj50zkyqm.cloudfront.net/promos/health/GLN/masterswitch_chocolateRL_ihtml_0317/ParallaxOne_5.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -102,7 +117,43 @@ li {
     color: white;
     padding: 3rem auto;
 }
+.sideBanner {
+    width: 90%;
+    max-width: -200px;
+    max-height: 200px; 
+    margin: 1rem 0; 
+}
+.sideBanner__wrapper {
+    background: #3d1c0f;
+    color: white;
+    margin-top: 5em; 
+    padding: 3em;
+    height: 20em; 
+
+}
+/* .sideBanner__row {
+    margin-left: 20%; 
+    margin-top: auto; 
+
+} */
+.sideBanner__col--img {
+padding: 0;
+top: 20%;
+bottom: 20%;  
+left: 3%;
+width: auto;
+/* display: inline-block; */
+vertical-align: middle;
+}
+.sideBanner__col--text {
+    padding: 10px;
+   align-items: center;  
+    font-size: 60%;
+}
 .sideBanner__col--text p {
-    text-align: left;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
+    line-height: 1.35em;
+    margin: .1em 1.25em;
+    display: block;
+
 }
